# tenders_tool

./: LICENSE  README.md  pyproject.toml
tenders_tool/: README.md  __init__.py  __main__.py  seao.py  snake.py
